# android-terminal

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mynk8/gui_engine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mynk8/gui_engine/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: bootstrap.rs  config.rs  lib.rs
rust/src/core/: glyph.rs  mod.rs  parser.rs  pty.rs  screen.rs  types.rs
termux-exec-compat/: termux_exec_compat.c
