[package]
name = "gui-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gl = "0.14.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
skia-safe = { version = "0.91.1", features = ["gl"] }
winit = { version = "0.30.12", features = ["android-native-activity"] }
android-activity = { version = "0.6", features = ["native-activity"] }

log = "0.4"
android_logger = "0.13"
nix = { version="0.31.1", features=["term", "process", "fs", "signal"] }
bitflags = "2.10.0"
